[package]
name = "jonmo"
version = "0.1.0"
edition = "2024"
categories = ["asynchronous", "gui", "game-development"]
description = "Bevy-native reactive signals"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["reactive", "signals", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/jonmo"
documentation = "https://docs.rs/jonmo"

[dependencies]
bevy = "0.15.3"
