[package]
name = "jonmo"
version = "0.1.4"
edition = "2024"
categories = ["asynchronous", "gui", "game-development"]
description = "Bevy-native functional reactive signals"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["reactive", "signals", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/jonmo"
documentation = "https://docs.rs/jonmo"

[dependencies]
bevy_ecs = "0.15.3"
bevy_reflect = "0.15.3"
bevy_hierarchy = "0.15.3"
bevy_log = "0.15.3"
bevy_app = "0.15.3"
bevy_derive = "0.15.3"

[dev-dependencies]
bevy = "0.15.3"
rand = "0.8"

[[example]]
name = "imperative"
path = "examples/imperative.rs"
doc-scrape-examples = true

[[example]]
name = "declarative"
path = "examples/declarative.rs"
doc-scrape-examples = true

[[example]]
name = "lifetime_list"
path = "examples/lifetime_list.rs"
doc-scrape-examples = true

[[example]]
name = "utils"
path = "examples/utils.rs"
doc-scrape-examples = true
crate-type = ["lib"]
