[package]
name = "jonmo"
version = "0.1.5"
edition = "2024"
categories = ["asynchronous", "gui", "game-development"]
description = "Bevy-native functional reactive signals"
exclude = ["assets/", ".github/", "crates/"]
keywords = ["reactive", "signals", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/databasedav/jonmo"
documentation = "https://docs.rs/jonmo"

[dependencies]
bevy_ecs = "0.16.0"
bevy_reflect = "0.16.0"
bevy_log = "0.16.0"
bevy_app = "0.16.0"
bevy_derive = "0.16.0"
bevy_time = "0.16.0"
enclose = "1.2"

[dev-dependencies]
bevy = "0.16.0"
rand = "0.9"

[[example]]
name = "basic"
path = "examples/basic.rs"
doc-scrape-examples = true

[[example]]
name = "basic_builder"
path = "examples/basic_builder.rs"
doc-scrape-examples = true

[[example]]
name = "lifetime_list"
path = "examples/lifetime_list.rs"
doc-scrape-examples = true

[[example]]
name = "utils"
path = "examples/utils.rs"
doc-scrape-examples = true
crate-type = ["lib"]
